@@ -1,9 +1,3 @@
-# EmployeeRegistryH2
-This is a spring boot application. 
+This is a CI/CD project integrating such technologies as GitHub, Jenkins, Docker, Spring Boot, Maven, Tomcat and  H2.
 
-Working on compiling spring boot maven app, still working on it. Removed enironmental variable path.
 
-Update Jenkins config file - # make jenkins listen on IPv4 address
-#JAVA_ARGS="-Xmx2048m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true"
-
-Adding Jenkins as a user. Working on java_home.
